<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_drawer_expenses">Expenses</string>
    <string name="nav_drawer_categories">Categories</string>
    <string name="nav_drawer_statistics">Statistics</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="user_name">Pavel Arkhipov</string>
    <string name="user_email">pashko00710@gmail.com</string>
    <string name="nav_drawer_exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="expenses_fragment_waste">Hello blank fragment expense</string>
    <string name="expenses_fragment_categories">Hello blank fragment categories</string>
    <string name="expenses_fragment_statistics">Hello blank fragment statistics</string>
    <string name="expenses_fragment_settings">Hello blank fragment settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Title for DetailsExpenseActivity -->
    <string name="detailsexpense_titlename">Add expense</string>

    <!-- TODO: Errors in TextInputLayout -->
    <string name="detailsexpense_error_sum">Fill in the amount</string>
    <string name="detailsexpense_error_note">Fill out a note , please</string>

    <!-- TODO: Values for categories -->
    <string-array name="categories">
        <item>Entertainment</item>
        <item>Food</item>
        <item>Study</item>
        <item>Cloth</item>
        <item>Transport</item>
        <item>Other</item>
        <item>Tel</item>
        <item>Car</item>
    </string-array>

    <!-- TODO: Values for Search -->
    <string name="search_title">Search</string>

    <!-- TODO: Values for Registration -->
    <string name="registration_min_symbols_login">Minimum 5 symbol in username</string>
    <string name="registration_min_symbols_password">Minimum 5 symbol in password</string>
    <string name="registration_username">UserName</string>
    <string name="registration_password">Password</string>
    <string name="registration_btn_login">LOGIN</string>
    <string name="login_title">Login</string>
    <string name="registration_btn_registration">Registration</string>
    <string name="registration_busyalready">Busy Already</string>
    <string name="registration_error">Error</string>
    <string name="password_wrong">Wrong Password</string>
    <string name="login_wrong">Wrong Login</string>
    <string name="internet_not_connected">Internet is not connected</string>


    <string name="content_authority">com.example.moneytracker</string>
    <string name="sync_account_type">moneytracker.example.com</string>
    <string name="delete_text">Delete</string>



    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Updates Notifications</string>
    <string name="pref_enable_notifications_true">On</string>
    <string name="pref_enable_notifications_false">Off</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_enable_notifications_def_false" translatable="false">false</string>

    <!-- String for notification bar-->
    <string name="notification_message">Data synchronized</string>
    <string name="pref_notification_section">Settings</string>

    <string name="pref_enable_sound_key" translatable="false">enable_notifications_sound</string>
    <string name="pref_enable_sound_label">Sound</string>

    <string name="pref_enable_vibrate_key" translatable="false">enable_notifications_vibrate</string>
    <string name="pref_enable_vibration_label">Vibration</string>

    <string name="pref_enable_indicator_key" translatable="false">enable_notifications_indicator</string>
    <string name="pref_enable_indicator_label">Indicator</string>
    <string name="statistics_total">Total costs:</string>
    <string name="addexpense_date">Date</string>
    <string name="addexpense_btn_cancel">Cancel</string>
    <string name="addexpense_btn_ready">Ready</string>
    <string name="addexpense_entry_added">Entry added</string>
    <string name="error">Error</string>
    <string name="loginactivity_fatal_exc">"Fatal Exception "</string>
    <string name="expenses">Expenses</string>
    <string name="categories">Categories</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="authorization">Authorization</string>
    <string name="enteradd_categories_add">Enter a name for the category</string>
    <string name="catadd_min_letters">Minimum two letters</string>
    <string name="catadd_nice">Nice</string>
    <string name="categories_food">Food</string>
    <string name="categories_cinema">Cinema</string>
    <string name="categories_transport">Transport</string>
    <string name="categories_cloth">Cloth</string>
    <string name="categories_products">Products</string>
    <string name="categories_other">Other</string>
    <string name="categories_communication">Communication</string>
    <string name="statistics_distrib">Distribution of expenses by category</string>
</resources>