<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/login_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorWhite"
            android:hint="@string/registration_username"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorWhite"
            android:hint="@string/registration_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"/>

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/registration_btn_login"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnLinkToRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/registration_btn_registration"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20dp"
            android:paddingBottom="80dp"
            android:textSize="15dp" />

        <com.google.android.gms.common.SignInButton
            android:layout_gravity="center|bottom"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/google_login_btn">
        </com.google.android.gms.common.SignInButton>


    </LinearLayout>

</LinearLayout>



